# rag-chatbot

document_processing/: clean_manuals.py  (+1 more)
rag_chatbot/: Dockerfile  am-robots.json  app.py  config.py  db_data.json  email_flow_explanation.py  main.py  pyproject.toml  recursive_product_reader.py  registration.py  requirements.txt  run_server.py  setup_pinecone.py  supabase_schema.sql  test_email.py  test_scheduler.py
rag_chatbot/.chainlit/: config.toml
rag_chatbot/md_files/: EMAIL_FIXES_APPLIED.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  SUPPORT_CASE_IMPLEMENTATION.md  SUPPORT_CASE_QUICK_REFERENCE.md  TESTING_CHECKLIST.md  WORKFLOW_CHANGES.md  chainlit.md
rag_chatbot/products/2,7 mm Basic Cable – Black/: 2,7_mm_basic_cable_–_black.json
rag_chatbot/products/2,7 mm Basic Cable – Black/manuals/: Manual_German.json
rag_chatbot/products/3,4 mm Green Standard Boundary Cable/: 3,4_mm_green_standard_boundary_cable.json
rag_chatbot/products/AM Garage 1/: am_garage_1.json
rag_chatbot/products/LUBA Mammotion Reversible Blades/: luba_mammotion_reversible_blades.json
rag_chatbot/products/My Robot Home Compact/: my_robot_home_compact.json
rag_chatbot/public/: auth.js  style.css
rag_chatbot/src/: __init__.py
rag_chatbot/src/agent/: __init__.py  support_agent.py  tools.py
rag_chatbot/src/core/: __init__.py  config.py  constants.py
rag_chatbot/src/services/: __init__.py  brand_service.py  product_service.py  support_case_service.py
rag_chatbot/src/utils/: __init__.py  guardrails.py  language.py
(+84 files in other folders)
